# lem_in

./: CMakeLists.txt  main.c  newfile  res_comm  res_comments  res_dead_end  res_dead_end2  res_dead_end3  res_flow_max  res_hex  res_invalidcommand  res_loop  res_map_25  res_simp1  res_simp2  res_simpweb  res_slack2  res_slakbrute  res_submodif  vs
src/vs/: animate_solution.c  check_for_link.c  check_for_room.c  check_for_type.c  create_iter.c  display_ants.c  display_objs.c  find_cels_num.c  find_room.c  helper.c  init_sdl.c  init_srfcandtxtrs.c  is_objtype.c  main.c  read_validate.c  save_iter.c  save_room.c  validate_result.c  validation.c
visualisation/: .gitignore  Makefile  exmpl  files
visualisation/includes/: errors.h  validation.h  vis.h  vis_errors.h  vis_validation.h  visualization.h
visualisation/libft/: Makefile  ft_freetwodarr.c
visualisation/libft/includes/: libft.h
visualisation/sources/validation/: animate_solution.c  calc_additional_metrics.c  calc_sizes.c  check_for_ant.c  check_for_link.c  check_for_room.c  check_for_type.c  create_iter.c  display_ants.c  display_links.c  display_objs.c  display_rooms.c  display_titles.c  find_cels_num.c  find_iter.c  find_room.c  free_funcs.c  helper.c  init_sdl.c  init_srfcandtxtrs.c  is_objtype.c  main.c  read_fd.c  read_validate.c  save_iter.c  save_link.c  save_room.c  validate_result.c  validation.c
visualisation/sources/visualization/: calc_sizes.c  trial.c
